--- a/src/app/pages/grafica1/grafica1.component.html
+++ b/src/app/pages/grafica1/grafica1.component.html
@@ -1,1 +1,17 @@
-<p>grafica1 works!</p>
+<div class="row">
+	<div class="col-6">
+		<app-dona title="Ventas" [label]="labels" [data]="data1"></app-dona>
+	</div>
+	<div class="col-6">
+		<app-dona [label]="labels" [data]="data1"></app-dona>
+	</div>
+</div>
+
+<div class="row">
+	<div class="col-6">
+		<app-dona title="Ventas 2" [label]="labels"></app-dona>
+	</div>
+	<div class="col-6">
+		<app-dona [label]="labels"></app-dona>
+	</div>
+</div>
