--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,13 @@
 	animation-fill-mode: both;
 }
 
-#themecolors .selector {
+#themecolors .selector, .cursor {
 	cursor: pointer;
+}
+
+#googleButton{
+	justify-content: center;
+	align-items: center;
+	display: flex;
+	text-align: center;
 }
