--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -73,11 +73,13 @@
             href="javascript:void(0)"
             ><i class="ti-search"></i
           ></a>
-          <form class="app-search">
+          <form class="app-search"
+                (submit)="search(txtTermino.value)">
             <input
               type="text"
               class="form-control"
               placeholder="Search & enter"
+              #txtTermino
             />
             <a class="srh-btn"><i class="ti-close"></i></a>
           </form>
