--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -32,7 +32,7 @@
         <li class="nav-devider"></li>
         <li class="nav-small-cap">PERSONAL</li>
 
-        <li *ngFor="let item of menu">
+        <li *ngFor="let item of sidebarService.menu">
           <a
             class="has-arrow waves-effect waves-dark"
             href="#"
